--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "aq-portfolio",
+  "homepage": "https://vinay02diamond.github.io/vk-website/",
+  "name": "vkportfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
